--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="https://img.icons8.com/fluency/48/null/cash-on-delivery.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LMS Tools</title>
+    <title>Daily</title>
 </head>
 
 <body>
